--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,7 +14,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get --no-install-suggests --no-install-recommends install g++
-        sudo apt-get --no-install-suggests --no-install-recommends install g++-arm-linux-gnueabihf qemu-user binutils-arm-linux-gnueabihf
+        sudo apt-get --no-install-suggests --no-install-recommends install g++-arm-linux-gnueabihf qemu-user
+        sudo apt-get --no-install-suggests --no-install-recommends install g++-aarch64-linux-gnu qemu-user
     - name: Checkout gemmology
       uses: actions/checkout@v3
     - name: Checkout xsimd
@@ -25,4 +26,4 @@ jobs:
     - name: Setup SDE
       run: sh .github/workflows/install_sde.sh
     - name: Check
-      run: make -C test SDE64=../sde-external-8.56.0-2020-07-05-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include CXXFLAGS=-Wall\ -Werror -j ARM_CXX=arm-linux-gnueabihf-g++ ARM_QEMU=qemu-arm\ -L\ /usr/arm-linux-gnueabihf
+      run: make -C test SDE64=../sde-external-8.56.0-2020-07-05-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include CXXFLAGS=-Wall\ -Werror -j ARM_CXX=arm-linux-gnueabihf-g++ ARM_QEMU=qemu-arm\ -L\ /usr/arm-linux-gnueabihf ARM64_CXX=aarch64-linux-gnu-g++ ARM64_QEMU=qemu-aarch64\ -L\ /usr/aarch64-linux-gnu
