--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Setup SDE
       run: sh .github/workflows/install_sde.sh
     - name: Check
-      run: make -C test SDE64=../sde-external-8.56.0-2020-07-05-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include CXXFLAGS=-Wall\ -Werror -j ARM_CXX=arm-linux-gnueabihf-g++ ARM_QEMU=qemu-arm\ -L\ /usr/arm-linux-gnueabihf ARM64_CXX=aarch64-linux-gnu-g++ ARM64_QEMU=qemu-aarch64\ -L\ /usr/aarch64-linux-gnu
+      run: make -C test SDE64=../sde-external-9.21.1-2023-04-24-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include CXXFLAGS=-Wall\ -Wno-psabi\ -Werror -j ARM_CXX=arm-linux-gnueabihf-g++ ARM_QEMU=qemu-arm\ -L\ /usr/arm-linux-gnueabihf ARM64_CXX=aarch64-linux-gnu-g++ ARM64_QEMU=qemu-aarch64\ -L\ /usr/aarch64-linux-gnu
