[test] Validate gemmology with -fsanitize=address
Mostly test code cleaning, and a small workaround to prevent an invalid
read warning when loading the end of a matrix: basically padding the
allocated input to please ASAN. The exact behavior of loading a
partially valid address range with simd instruction is not well defined,
we currently assume it's ok.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,12 +9,15 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: '${{ matrix.sys.compiler }}'
+    name: '${{ matrix.sys.compiler }} / ${{ matrix.flags.cxxflags }}'
     strategy:
       matrix:
         sys:
           - { compiler: 'g++'}
           - { compiler: 'clang++'}
+        flags:
+          - { cxxflags: '-O2' }
+          - { cxxflags: '-O0 -g -fsanitize=address' }
     steps:
     - name: Setup GCC
       if: ${{ matrix.sys.compiler == 'g++' }}
@@ -40,8 +43,8 @@ jobs:
 
     - name: Check GCC
       if: ${{ matrix.sys.compiler == 'g++' }}
-      run: make -C test CXX=${{ matrix.sys.compiler }} SDE64=../sde-external-9.21.1-2023-04-24-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include CXXFLAGS=-Wall\ -Wno-psabi\ -Werror -j ARM_CXX=arm-linux-gnueabihf-g++ ARM_QEMU=qemu-arm\ -L\ /usr/arm-linux-gnueabihf ARM64_CXX=aarch64-linux-gnu-g++ ARM64_QEMU=qemu-aarch64\ -L\ /usr/aarch64-linux-gnu
+      run: make -C test CXX=${{ matrix.sys.compiler }} "CXXFLAGS=-Wall -Wno-psabi -Wno-unused-result -Werror ${{ matrix.flags.cxxflags }}" SDE64=../sde-external-9.21.1-2023-04-24-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include -j ARM_CXX=arm-linux-gnueabihf-g++ ARM_QEMU=qemu-arm\ -L\ /usr/arm-linux-gnueabihf ARM64_CXX=aarch64-linux-gnu-g++ ARM64_QEMU=qemu-aarch64\ -L\ /usr/aarch64-linux-gnu
 
     - name: Check Clang
       if: ${{ matrix.sys.compiler == 'clang++' }}
-      run: make -C test CXX=${{ matrix.sys.compiler }} SDE64=../sde-external-9.21.1-2023-04-24-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include CXXFLAGS=-Wall\ -Wno-psabi\ -Werror -j NOOMP=1
+      run: make -C test CXX=${{ matrix.sys.compiler }} "CXXFLAGS=-Wall -Wno-psabi -Wno-unused-result -Werror ${{ matrix.flags.cxxflags }}" SDE64=../sde-external-9.21.1-2023-04-24-lin/sde64 XSIMD_INCLUDE_DIR=../xsimd/include -j NOOMP=1
